Changelog
=========

7.7-dev - (unreleased)
----------------------

7.6 - (2013-09-18)
------------------
* Bug fix: Fixed manage portlets page on Assessment, IndicatorFactSheet and
  Specification
  [tiberich #14593]
* Bug fix: more logic condition fixes on frequency of updates agg edit
  [tiberich #16754]

7.5 - (2013-09-17)
------------------
* Bug fix: fix logic condition in eea.indicators frequency of edit display
  [tiberich #16754]

7.4 - (2013-09-06)
------------------
* Change WIP: change frequency_of_updates to have multiple pairs of
  frequency years/time of year information
  [tiberich #14929]

7.3 - (2013-08-21)
------------------
* Bug fix: fix popup editing in aggregated edit view for Indicators and
  Assessments
  [tiberich #15969]

7.2 - (2013-08-19)
------------------
* Bug fix: get rid of Products.kupu dependencies, we use TinyMCE now.
  [tiberich]
* Bug fix: use new method of seting up TinyMCE, according to upstream
  API changes
  [tiberich #15645]

7.1 - (2013-08-09)
------------------
* Bug fix: corrected the temporal coverage formatting by re-use existing
  well working logic. Do not re-invent the wheel.
  [demarant #14871]
* Bug fix: corrected mapping of ESMS DATA_DESCR.
  [demarant #14871]
* Bug fix: improved esms xml unicode handling for certain cases like typology metadata.
  [demarant #14871]
* Feature: added @@esms.xml view for assessments to export information
  according to ESMS metadata format
  [tiberich, demarant #14871 EEA]
* Feature: added a @@assessments_latest_versions_links view that retrieves a
  list of all published assessments, only the latest versions
  [tiberich #14871 EEA]
* Bug fix: added a content rule to enable discussions on Assessments when the
  'show' or 'publishEionet' transitions are executed.
  [tiberich #14858]
* Bug fix: don't try to set discussionAllowed on assessments from code; this
  will be done from a content rule.
  [tiberich #14858]

7.0 - (2013-06-17)
------------------